src/css/newcase.css
@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap');

.bookmark {
  margin: 2em 2em 2em 3em;
}

.nav_bar {
  display: flex;
  justify-content: space-between;
  height: 90px;
  border-bottom: 2px solid var(--primary-color);
}

.notification_btn {
  display: flex;
  width: 50%;
  gap: 15px;
  align-items: center;
}

.searchbar-box {
  display: flex;
  border: 1px solid var(--primary-color-1);
  box-shadow: 0px 4px 0px var(--primary-color);
  border-radius: 30px;
  height: 43px;
  width: 480px;
  margin-bottom: 7px;
}

.search-bar-NC::-webkit-input-placeholder {
  color: var(--primary-color);

  background-position: 95% 50%;
  background-repeat: no-repeat;
  font-size: 0.9em;
}

.search-bar-NC {
  border-radius: 0px 30px 30px 0px;
  border-left: 2px solid var(--primary-color);
  border-right: none;
  border-top: none;
  border-bottom: none;
  width: 92%;
  font-size: 18px;
  padding-left: 10px;
}
.newcase_search_icon {
  height: 1.6rem;
  margin: 1rem 1.5rem 0rem 0rem;
}
.newcase_search_icon svg {
  height: 2.2rem;
  width: 2.2rem;
  color: var(--primary-color);
}
.newcase_search_icon:hover {
  cursor: pointer;
}
.search-bar-NC:focus {
  outline: none;
}
.searchbar-logo {
  height: 2.2rem;
  width: 3rem;
  margin: 1rem;
}
.searchbar-logo:hover {
  cursor: pointer;
}

.container {
  display: flex;
  flex: 1 1 auto;
  height: 82vh;
  /* max-width: 100vw !important; */
  /* width: 100vw ; */
  /* overflow: hidden; */
}
.canvas {
  display: flex;
}

.sideNavSection {
  height: 78vh;
  overflow-y: scroll;
}
.canvasSection {
  height: 100%;
  width: 100%;
  overflow: hidden;
}

.toolSection {
  flex: 0 0 5%;
  display: flex;
  justify-content: center;
  align-items: center;
  /* position: absolute;
  right: 0;
  top: 10rem; */
}
.case-dashboard {
  display: flex;
  margin: -2rem 0 0rem 0rem;
}
.case-no {
  font-size: 2rem;
  font-family: sans-serif;
  color: var(--primary-color);
  font-weight: 600;
  padding-left: 1em;
}
.dashboard-cases {
  margin: 4.2rem 0rem 2rem 2rem;
  display: flex;
}
.dashboard-title {
  font-size: 2.4rem;
  font-weight: 400;
  letter-spacing: 1px;
  color: var(--primary-color-1);
}

.react-flow__panel {
  display: none !important;
}
.react-flow__node-default {
  word-break: break-all;
}

.help {
  display: flex;
  background-color: var(--secondary-color);
  position: absolute;
  top: 9rem;
  width: 45rem;
  height: 75vh;
  box-sizing: border-box;
  transition: top 0.5s ease-out;
  flex-direction: column;
  color: var(--primary-color);
  right: 0;
  z-index: 1;
  word-break: break-all;
  border: 2px solid var(--primary-color);
  border-right: none;
  border-top: none;
}
.help2 {
  overflow-y: scroll;
  width: 44.5rem;
  overflow-x: hidden;
  padding-left: 5px;
  /* border-bottom: 2x solid var(--primary-color); */
}

/* .shape3{
position: absolute;
width: 30px;
height: 30px;
border: 2px solid var(--primary-color);
background: var(--secondary-color);
transform: rotate(45deg);
top: -16px;
border-right: none;
border-bottom: none;

} */

.noti {
  display: flex;
  background-color: var(--secondary-color);
  position: absolute;
  top: 9.5rem;
  width: 300px;
  height: 500px;
  border-radius: 40px solid var(--primary-color);
  box-sizing: border-box;
  flex-direction: column;
  color: var(--primary-color);
  opacity: 1;
  border-radius: 10px;
  border: 2px solid var(--primary-color);
  z-index: 1;
  right: 8.5rem;
}
/* .noti-data p, h2{
  margin :1.5rem;
} */

.noti-triangle {
  position: absolute;
  width: 30px;
  height: 30px;
  background: var(--secondary-color);
  border: 2px solid var(--primary-color);
  transform: rotate(45deg);
  top: -16px;
  border-radius: 2px;
  left: 233px;
  border-right: none;
  border-bottom: none;
}

.pro {
  display: flex;
  position: absolute;
  background-color: var(--secondary-color);
  width: 25rem;
  height: 25rem;
  top: 93px;
  border: 2px solid var(--primary-color);
  z-index: 1;
  /* margin-left: 1160px; */
  right: 5rem;
  border-radius: 10px;
}

.pro-data {
  display: flex;
  padding: 20px;
  flex-direction: column;
  position: absolute;
}
.pro-data h2 {
  font-size: 2.4rem;
  width: 100%;
  font-family: 'Hammersmith One';
  padding: 0rem 0rem 1.2rem 1.2rem;
}
.pro-data article {
  display: flex;
  align-items: center;
}
.pro-data article h4 {
  font-size: 1.4rem;
  font-weight: 400;
}
.pro-icon {
  height: 30px;
  width: 30px;
  flex-direction: row;
}
.logout-btn {
  display: flex;
  padding: 3rem 0rem 0rem 13rem;
  align-items: center;
  gap: 0.75rem;
  height: 4rem;
}
.logout-btn:hover {
  cursor: pointer;
}
.logout-btn h4 {
  font-size: 1.4rem;
  font-weight: 400;
}
/* .logout-icon{
  height: 1rem;
} */

.pro-triangle {
  position: absolute;
  width: 30px;
  height: 30px;
  border: 2px solid var(--primary-color);
  transform: rotate(45deg);
  background: var(--secondary-color);
  top: -16.125px;
  border-radius: 2.2px;
  left: 204px;
  border-right: none;
  border-bottom: none;
}

.activity-icon {
  height: 50px;
  width: 50px;
}

/* .close-btn {
  margin-left: 304px; */
/* } */

.active {
  display: flex;
  position: absolute;
  background-color: var(--secondary-color);
  width: 300px;
  height: 550px;
  top: 9.5rem;
  border: 2px solid var(--primary-color);
  z-index: 1;
  /* margin-left: 270px;
   */
  /* left: 79.5rem; */
  right: 16rem;
  border-radius: 10px;
}
.tri {
  position: absolute;
  height: 30px;
  width: 30px;
  border: 2px solid var(--primary-color);
  transform: rotate(45deg);
  background: var(--secondary-color);
  top: -16.125px;
  left: 244px;
  border-radius: 2px;
  border-bottom: none;
  border-right: none;
}

.delete-noti-btn {
  position: absolute;
  bottom: 2rem;
  right: 1rem;
  display: flex;
  font-size: 1.8rem;
}
.delete-noti-btn:hover {
  cursor: pointer;
}
.clear-noti {
  font-weight: 200;
  font-size: 2rem;
}
.delete-activity-btn {
  padding: 12rem 0 0 12rem;
}

/* .history .noti-data p, h2{
  margin :1.5rem;
} */

.datestamp {
  color: var(--primary-color-1);
}
.notifications,
.datestamp {
  font-size: 1.4rem;
}
.notifications {
  display: flex;
  /* justify-content: space-around;
   */
  align-items: center;
}
.notifications svg:hover {
  cursor: pointer;
}
.notification-sections {
  padding-left: 1.5rem;
}
.datestamp {
  padding-left: 3rem;
}

.btn_memberHover {
  border: 2px solid var(--primary-color);
  outline: none;
  background-color: var(--secondary-color);
  padding: 0px 2.5px;
  border-radius: 100px;
  transition: all ease 0.1s;
  box-shadow: 0px 2px 0px 0px var(--primary-color-1);
  cursor: pointer;
}
.member_btn_edit {
  width: 13.4rem;
  height: 3.9rem;
  color: var(--primary-color);
  background-color: var(--secondary-color);
  font-weight: 600;
  border-radius: 1.2rem;
  position: relative;
  top: 0.5rem;
  left: 3.5rem;
  box-shadow: 0px 3px 0px 0px var(--primary-color);
}
.member_btn_edit:hover {
  cursor: pointer;
}
.member_btn_membership {
  width: 18rem;
  height: 3.9rem;
  color: var(--secondary-color);
  background-color: var(--primary-color);
  font-weight: 600;
  border-radius: 1.2rem;
  position: relative;
  top: 1.5rem;
  left: 1rem;
  box-shadow: 0px 3px 0px 0px var(--primary-color-1);
  /* syntax: ; */
}
.member_btn_membership:hover {
  cursor: pointer;
}
/* .react-flow__pane{
  background-color: var(--secondary-color);
} */
.newcase-noti-icon {
  border: 2px solid var(--primary-color);
  outline: none;
  background-color: white;
  padding: 8px;
  border-radius: 50%;
  transition: all ease 0.1s;
  box-shadow: 0px 5px 0px 0px var(--primary-color-1);
  cursor: pointer;
}

